--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
 
-          <h1>Current Weather</h1>
+          <h1>5-day weather forecast</h1>
 
         </section>
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
